XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Deprecated lang.Type::$ANY in favor of lang.Type::$VAR
  (friebe)
- Changed util.collections.Map interface to ensure array access works.
  Any implementation must now adhere to http://de3.php.net/arrayaccess
  (friebe)

RFCs
~~~~
- Implemented RFC #0183 - lang.ResourceProvider
  (kiesel)

Bugfixes
~~~~~~~~
- Cleaned up various apidoc spelling issues in @param / @return, and
  exchanged "mixed" with "var" throughout the entire repository.
  (friebe)
- Fixed lang.XPClass raising fatals when methods inherited / implemented
  from builtin classes
  (friebe)
- Fixed reflection on lang.Throwable class in certain cases when builtin
  Exception class is queried for non-existant details
  (friebe)
- Fixed Wrapper::load() not executing casters and checkers when array
  values were submitted and first value is empty
  (ohinckel, Sebastian Kusnier)

Features
~~~~~~~~
- Added new scriptlet.DirectOutputHttpScriptletResponse class
  (kiesel)
- Added "-r" command line switch to xp runner
  http://news.xp-framework.net/article/345/2010/02/16/
  (friebe)
- Enabled discovery of port used in bind() when setting to port to 0 -
  which indicates to use any free port - in peer.ServerSocket
  http://news.xp-framework.net/article/343/2010/02/01/ 
  (friebe)


Version 5.7.7, released 2010-01-26
----------------------------------
SVN version: 14139

Heads up!
~~~~~~~~~
- Deprecated unittest.TestCase::assertClass() and assertSubclass() -
  replaced by new method assertInstanceOf().
  (friebe)
- Changed FTP_ASCII / FTP_BINARY constants in peer.ftp package to class
  constants FtpTransfer::ASCII and FtpTransfer::BINARY.
  http://news.xp-framework.net/article/334/2009/12/28/
  (friebe)

Features
~~~~~~~~
- Added getOptions() and getSelectedOptions() to unittest.web.SelectField 